# rk3588_learning

./: README.md  git_help.txt
week01/: git_help.txt  hello_rk  hello_rk.cpp  pixel_draw  pixel_draw.cpp  pixel_memory  pixel_memory.cpp
week02/: CMakeLists.txt
week02/src/: main.cpp
week03/: CMakeLists.txt
week03/src/: main.cpp
